--- a/건강데이터예측.md
+++ b/건강데이터예측.md
@@ -1,6 +1,6 @@
 # 공공건강데이터를 이용한 나이별 질병발생확률 예측분석
 ## ● 건보에서 제공하는 공공건강데이터를 이용하여 지도학습,비지도학습을 이용하여 예측 알고리즘중 효과가 더 좋은 알고리즘을 찾기 
-### (기본적으로 데이터 핸들링에 대한 이해가 필요)
+### (기본적으로 알고리즘의 종류 및 특징,데이터 핸들링에 대한 이해가 필요)
 ## ● 로우데이터 혹은 공개 가능 2차데이터를 찾아서 n수가 적당한 데이터를 찾거나 공개논문에 데이터 사용
 ### (문제점은 찾기가 쉽지 않다는 점,공공데이터의 n의 갯수가 너무 많아 불필요한 특징 제거 및 규모 축소를 목표로 전처리 과정을 세밀하게 조율 필요)
 ## ● 회귀분석,분류 / 군집화,차원축소의 알고리즘들을 찾아 차세대 알고리즘 찾기
