--- a/건강데이터예측.md
+++ b/건강데이터예측.md
@@ -4,6 +4,6 @@
 ## ● 로우데이터 혹은 공개 가능 2차데이터를 찾아서 n수가 적당한 데이터를 찾거나 공개논문에 데이터 사용
 ### (문제점은 찾기가 쉽지 않다는 점,공공데이터의 n의 갯수가 너무 많아 불필요한 특징 제거 및 규모 축소를 목표로 전처리 과정을 세밀하게 조율 필요)
 ## ● 회귀분석,분류 / 군집화,차원축소의 알고리즘들을 찾아 차세대 알고리즘 찾기
-### [로지스틱회귀,앙상블,의사결정나무등 의료데이터에 핫한 알고리즘 알아보기 (알고리즘의 이해성이 요구됨)]
+### {로지스틱회귀,앙상블,의사결정나무등 의료데이터에 핫한 알고리즘 알아보기 (알고리즘의 이해성이 요구됨)}
 ## ● 만일 프로젝트가 불가능하다 판단될시 차선책을 준비해야함 (2가지정도)
-### [게임 or 일상생활에 도움이 되는 AI 머신러닝 주제 찾기 (향후 추가예정)]
+### {게임 or 일상생활에 도움이 되는 AI 머신러닝 주제 찾기 (향후 추가예정)}
