--- a/건강데이터예측.md
+++ b/건강데이터예측.md
@@ -7,3 +7,8 @@
 ### {로지스틱회귀,앙상블,의사결정나무등 의료데이터에 핫한 알고리즘 알아보기 (알고리즘의 이해성이 요구됨)}
 ## ● 만일 프로젝트가 불가능하다 판단될시 차선책을 준비해야함 (2가지정도)
 ### {게임 or 일상생활에 도움이 되는 AI 머신러닝 주제 찾기 (향후 추가예정)}
+#---------------------------------------------------------------------------------------------------------------------------------------------
+# 필요개선점
+### ● R을 이용하여 n의 갯수를 불필요한 특징을 날리고 랜덤으로 n수를 줄여 실제 가동 가능하게 100이하의 n수로 낮추기
+### ● 기존 데스크탑의 성능을 늘려서 알고리즘 실행의 시간을 조금이나마 단축이 필요함
+### ● 기존의 의료 데이터 논문을 보면 사용한 알고리즘 쓰여 있지만 그안에 변수를 어떡게 했는지는 자세히 없어서 조금은 상세히 알아봐야함
