--- a/건강데이터예측.md
+++ b/건강데이터예측.md
@@ -1,5 +1,7 @@
 # 공공건강데이터를 이용한 나이별 질병발생확률 예측분석
 ## ● 건보에서 제공하는 공공건강데이터를 이용하여 지도학습,비지도학습을 이용하여 예측 알고리즘중 효과가 더 좋은 알고리즘을 찾기 
+### 예시 https://opendata.hira.or.kr/op/opc/selectOpenData.do?sno=13101&publDataTpCd=&searchCnd=&searchWrd=&pageIndex=1
+### (연령은 진료시점 만(滿)나이 기준으로 산출함 / 지역은 요양기관 소재지 기준이며 수진자의 거주지와 다를 수 있음 / 환자수는 범주 내에 동일인의 중복을 제거한 값이지만, 다른 범주와 단순합산할 경우 중복이 발생할 수 있음 / 환자수 10명 미만은 "0"으로 기재)
 ### (기본적으로 알고리즘의 종류 및 특징,데이터 핸들링에 대한 이해가 필요)
 ## ● 로우데이터 혹은 공개 가능 2차데이터를 찾아서 n수가 적당한 데이터를 찾거나 공개논문에 데이터 사용
 ### (문제점은 찾기가 쉽지 않다는 점,공공데이터의 n의 갯수가 너무 많아 불필요한 특징 제거 및 규모 축소를 목표로 전처리 과정을 세밀하게 조율 필요)
